DTSCCI-685 Code Clean Up